--- a/index.html
+++ b/index.html
@@ -4,111 +4,383 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Website</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
-    * { margin:0; padding:0; box-sizing:border-box; }
+    * { 
+      margin:0; 
+      padding:0; 
+      box-sizing:border-box; 
+    }
+
+    :root {
+      --primary: #6366f1;
+      --primary-dark: #4f46e5;
+      --secondary: #f59e0b;
+      --dark: #1f2937;
+      --light: #f9fafb;
+      --text: #374151;
+      --text-light: #6b7280;
+    }
 
     body {
-      font-family: "Segoe UI", Roboto, sans-serif;
-      background:#f9fafb;
-      color:#333;
+      font-family: 'Inter', sans-serif;
+      background: var(--light);
+      color: var(--text);
       line-height:1.6;
+      overflow-x: hidden;
+    }
+
+    /* Smooth Scrolling */
+    html {
+      scroll-behavior: smooth;
     }
 
     /* Navbar */
     header {
-      background: linear-gradient(90deg, #b79494, #000000);
-      padding: 15px 40px;
-      color:white;
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
+      background: linear-gradient(135deg, var(--primary), var(--primary-dark));
+      padding: 18px 40px;
+      color: white;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: fixed;
+      width: 100%;
+      top: 0;
+      z-index: 1000;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      animation: slideDown 0.8s ease-out;
     }
+
+    @keyframes slideDown {
+      from {
+        transform: translateY(-100%);
+        opacity: 0;
+      }
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
     header h1 {
-      font-size: 22px;
-      letter-spacing:1px;
+      font-size: 24px;
+      font-weight: 700;
+      letter-spacing: -0.5px;
+      background: linear-gradient(45deg, #fff, #e0e7ff);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
     }
+
+    nav {
+      display: flex;
+      gap: 30px;
+    }
+
     nav a {
-      color:white;
-      text-decoration:none;
-      margin-left:20px;
-      font-weight:500;
-      transition:0.3s;
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+      padding: 8px 16px;
+      border-radius: 8px;
+      transition: all 0.3s ease;
+      position: relative;
+      overflow: hidden;
     }
-    nav a:hover { text-decoration:underline; }
+
+    nav a::before {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 0;
+      height: 2px;
+      background: var(--secondary);
+      transition: width 0.3s ease;
+    }
+
+    nav a:hover::before {
+      width: 100%;
+    }
+
+    nav a:hover {
+      background: rgba(255,255,255,0.1);
+      transform: translateY(-2px);
+    }
 
     /* Hero Section */
     .hero {
-      background: linear-gradient(135deg,#000000,#410303);
-      color:white;
-      text-align:center;
-      padding:80px 20px;
+      background: linear-gradient(135deg, var(--primary-dark), #1e1b4b);
+      color: white;
+      text-align: center;
+      padding: 160px 20px 100px;
+      position: relative;
+      overflow: hidden;
     }
+
+    .hero::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: 
+        radial-gradient(circle at 20% 80%, rgba(120, 119, 198, 0.3) 0%, transparent 50%),
+        radial-gradient(circle at 80% 20%, rgba(255, 255, 255, 0.1) 0%, transparent 50%);
+      animation: float 6s ease-in-out infinite;
+    }
+
+    @keyframes float {
+      0%, 100% { transform: translateY(0px); }
+      50% { transform: translateY(-20px); }
+    }
+
+    .hero-content {
+      position: relative;
+      z-index: 2;
+      animation: fadeUp 1s ease-out 0.3s both;
+    }
+
+    @keyframes fadeUp {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
     .hero h2 {
-      font-size:40px;
-      margin-bottom:10px;
+      font-size: 3.5rem;
+      font-weight: 700;
+      margin-bottom: 20px;
+      background: linear-gradient(45deg, #fff, #c7d2fe);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
     }
+
     .hero p {
-      font-size:18px;
-      opacity:0.9;
+      font-size: 1.25rem;
+      opacity: 0.9;
+      max-width: 600px;
+      margin: 0 auto 30px;
+      font-weight: 300;
     }
+
     .hero a {
-      display:inline-block;
-      margin-top:20px;
-      padding:12px 24px;
-      background:white;
-      color:#262f3d;
-      font-weight:600;
-      border-radius:6px;
-      text-decoration:none;
-      transition:0.3s;
+      display: inline-block;
+      margin-top: 20px;
+      padding: 15px 35px;
+      background: var(--secondary);
+      color: white;
+      font-weight: 600;
+      border-radius: 50px;
+      text-decoration: none;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 15px rgba(245, 158, 11, 0.3);
+      position: relative;
+      overflow: hidden;
     }
-    .hero a:hover { background:#f0f0f0; }
+
+    .hero a::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
+      transition: left 0.5s;
+    }
+
+    .hero a:hover::before {
+      left: 100%;
+    }
+
+    .hero a:hover {
+      background: #eab308;
+      transform: translateY(-3px);
+      box-shadow: 0 8px 25px rgba(245, 158, 11, 0.4);
+    }
 
     /* About Section */
     .about {
-      max-width:900px;
-      margin:60px auto;
-      padding:0 20px;
-      text-align:center;
+      max-width: 1200px;
+      margin: 80px auto;
+      padding: 0 20px;
+      text-align: center;
     }
+
     .about h3 {
-      font-size:26px;
-      color:#1f1f23;
-      margin-bottom:12px;
+      font-size: 2.5rem;
+      color: var(--dark);
+      margin-bottom: 20px;
+      font-weight: 700;
     }
+
     .about p {
-      color:#555;
-      font-size:16px;
-      margin-bottom:24px;
+      color: var(--text-light);
+      font-size: 1.1rem;
+      margin-bottom: 40px;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
     }
+
     .highlights {
-      display:grid;
-      grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
-      gap:20px;
-      margin-top:20px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 30px;
+      margin-top: 40px;
     }
+
     .box {
-      background:white;
-      padding:25px;
-      border-radius:10px;
-      box-shadow:0 4px 10px rgba(0,0,0,0.08);
-      transition:0.3s;
+      background: white;
+      padding: 40px 30px;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+      transition: all 0.4s ease;
+      position: relative;
+      overflow: hidden;
+      border: 1px solid rgba(0,0,0,0.05);
     }
-    
+
+    .box::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 4px;
+      background: linear-gradient(90deg, var(--primary), var(--secondary));
+      transform: scaleX(0);
+      transition: transform 0.4s ease;
+    }
+
+    .box:hover::before {
+      transform: scaleX(1);
+    }
+
+    .box:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 20px 40px rgba(0,0,0,0.15);
+    }
+
     .box h4 {
-      color:#3c3c3d;
-      margin-bottom:8px;
+      color: var(--dark);
+      margin-bottom: 15px;
+      font-size: 1.4rem;
+      font-weight: 600;
     }
-    .box p { color:#444; font-size:14px; }
+
+    .box p { 
+      color: var(--text-light); 
+      font-size: 1rem;
+      line-height: 1.7;
+    }
 
     /* Footer */
     footer {
-      text-align:center;
-      background:#f3f4f6;
-      padding:15px;
-      margin-top:50px;
-      font-size:14px;
-      color:#555;
+      text-align: center;
+      background: var(--dark);
+      padding: 40px 20px;
+      margin-top: 80px;
+      color: white;
+    }
+
+    footer p {
+      font-size: 1rem;
+      opacity: 0.8;
+    }
+
+    footer strong {
+      color: var(--secondary);
+    }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      header {
+        padding: 15px 20px;
+        flex-direction: column;
+        gap: 15px;
+      }
+
+      nav {
+        gap: 15px;
+      }
+
+      .hero {
+        padding: 140px 20px 80px;
+      }
+
+      .hero h2 {
+        font-size: 2.5rem;
+      }
+
+      .hero p {
+        font-size: 1.1rem;
+      }
+
+      .about h3 {
+        font-size: 2rem;
+      }
+
+      .highlights {
+        grid-template-columns: 1fr;
+        gap: 20px;
+      }
+
+      .box {
+        padding: 30px 20px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .hero h2 {
+        font-size: 2rem;
+      }
+
+      nav {
+        flex-direction: column;
+        gap: 10px;
+        text-align: center;
+      }
+
+      .hero a {
+        padding: 12px 25px;
+        font-size: 0.9rem;
+      }
+    }
+
+    /* Scroll Animation */
+    .box, .about h3, .about p {
+      opacity: 0;
+      transform: translateY(30px);
+      transition: all 0.6s ease;
+    }
+
+    .box.visible, .about h3.visible, .about p.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    /* Loading Animation */
+    .loading {
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      border: 3px solid rgba(255,255,255,.3);
+      border-radius: 50%;
+      border-top-color: #fff;
+      animation: spin 1s ease-in-out infinite;
+    }
+
+    @keyframes spin {
+      to { transform: rotate(360deg); }
     }
   </style>
 </head>
@@ -126,9 +398,11 @@
 
   <!-- Hero -->
   <section class="hero">
-    <h2>Welcome to My Website</h2>
-    <p>Clean design, modern look, and a simple start to web development.</p>
-    <a href="form.html">Explore Now</a>
+    <div class="hero-content">
+      <h2>Welcome to My Website</h2>
+      <p>Clean design, modern look, and a simple start to web development.</p>
+      <a href="form.html">Explore Now</a>
+    </div>
   </section>
 
   <!-- About -->
@@ -157,6 +431,52 @@
   <footer>
     <p>© 2025 | Created by <strong>Your Name</strong></p>
   </footer>
+
+  <script>
+    // Scroll Animation
+    const observerOptions = {
+      threshold: 0.1,
+      rootMargin: '0px 0px -50px 0px'
+    };
+
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('visible');
+        }
+      });
+    }, observerOptions);
+
+    // Observe elements
+    document.querySelectorAll('.box, .about h3, .about p').forEach(el => {
+      observer.observe(el);
+    });
+
+    // Add loading state to buttons
+    document.querySelectorAll('a[href]').forEach(link => {
+      link.addEventListener('click', (e) => {
+        if (link.getAttribute('href').includes('form.html') || 
+            link.getAttribute('href').includes('table.html')) {
+          link.innerHTML = '<span class="loading"></span> Loading...';
+          setTimeout(() => {
+            link.innerHTML = 'Explore Now';
+          }, 2000);
+        }
+      });
+    });
+
+    // Navbar background change on scroll
+    window.addEventListener('scroll', () => {
+      const header = document.querySelector('header');
+      if (window.scrollY > 100) {
+        header.style.background = 'rgba(99, 102, 241, 0.95)';
+        header.style.backdropFilter = 'blur(10px)';
+      } else {
+        header.style.background = 'linear-gradient(135deg, var(--primary), var(--primary-dark))';
+        header.style.backdropFilter = 'none';
+      }
+    });
+  </script>
 
 </body>
 </html>
